--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ section.Y {
       <li><span>Begin work on mock-up for client website</span></li>
     </ul>
     <button class="add-card-btn btn" id="add-card-btn2">Add a card</button>
+	   
   </div>
   <div class="list" id="list3">
     <h3 class="list-title">Doing</h3>
@@ -115,6 +116,7 @@ section.Y {
       <li><span>Form Validator</span></li>
     </ul>
     <button class="add-card-btn btn" id="add-card-btn3">Add a card</button>
+	   
   </div>
 	
   <div style="float: right;width: 300px; display: block;" class="addlistdiv"><button class="add-list-btn btn" id="btnCreateNewList">Add a list</button>
@@ -127,14 +129,14 @@ section.Y {
     </div>
 		</div>
 </section>
-<div style="display: none;  position:absolute; margin-top:30%;margin-left: 20%; width: 200px;background-color: #FFFFFF; padding: 20px;" id="AddCard">
+<!--<div style="display: none;  position:absolute; margin-top:30%;margin-left: 20%; width: 200px;background-color: #FFFFFF; padding: 20px;" id="AddCard">
       <form id="CardList">
         <input  type="text" id="Cardname" name="Cardname" placeholder="Enter Card title..." autocomplete="off" dir="auto" maxlength="512">
         <div class="list-add-controls u-clearfix">
           <input class="button" type="submit" value="Add Card">
           <span class="CardClose" style="color: #414141;font-weight: bold;font-family: Constantia, 'Lucida Bright', 'DejaVu Serif', Georgia, 'serif'; font-size: 14px;">X</span></div>
       </form>
-    </div>
+    </div>-->
 <!-- End of lists container --> 
 
  
